--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,7 @@ a {
   background-color: #08aa9b;
   padding: 80px 0px;
   text-align: center;
+  color: #fff;
 }
 .subscribe-form .section-heading {
   margin-top: 0px;
@@ -235,10 +236,14 @@ a {
   width: 100%;
   height: 46px;
   border: 1px solid #fff;
-  background-color: transparent;
+  background-color: #fff;
   padding-left: 15px;
-  color: #fff;
+  color: #fff !important;
   outline: none;
+}
+
+.form-control.invalid {
+  color: #fff !important;
 }
 .subscribe-form .main-content form button:focus {
   color: #fff !important;
@@ -252,7 +257,7 @@ a {
   border-radius: 5px;
   padding: 10px 15px;
   display: inline-block;
-  color: #3a8bcd;
+  color: #08aa9b;
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 300;
@@ -261,6 +266,12 @@ a {
   transition: all 0.5s;
   box-shadow: none;
   border: none;
+}
+
+.subscribe-form .main-content form button:hover {
+  background-color: rgb(255, 239, 15);
+  color: #000;
+  font-weight: 700;
 }
 
 /* Footer Style */
@@ -723,4 +734,19 @@ a {
     margin-top: 15px;
     text-align: left;
   }
+}
+::placeholder {
+  color: #fff;
+}
+
+#email {
+  position: relative;
+}
+
+.invalid {
+  border-color: #f00;
+}
+
+.text-muted {
+  display: none;
 }
